--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ cabal-dev
 .cabal-sandbox/
 cabal.sandbox.config
 *.prof
+*.idea
 *.aux
 *.hp
 *.eventlog
@@ -20,3 +21,10 @@ cabal.project.local
 cabal.project.local~
 .HTF/
 .ghc.environment.*
+.m2/*
+dist/
+logs/
+out/
+target/
+*generated*
+.idea/
