--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </repositories>
     <dependencies>
 
-        <!-- ioc depdency -->
+        <!-- ioc dependency -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -163,6 +163,11 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
             <version>1.9.13</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.resilience4j</groupId>
+            <artifactId>resilience4j-circuitbreaker</artifactId>
+            <version>1.7.0</version>
         </dependency>
     </dependencies>
 
